--- a/index.html
+++ b/index.html
@@ -1,12 +1,38 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
-<title>100 days of fonts</title>
+  <title>100 Days of Fonts</title>
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css">
+  <link rel="stylesheet" type="text/css" href="css/styles.css">
+
+
+<!--Day 01 fonts-->
+  <link href="https://fonts.googleapis.com/css?family=Playfair+Display|Quicksand:400,500,700&display=swap" rel="stylesheet">
+
 </head>
+<!--This is day 01-->
+
 <body>
-
-<h1>Hello world</h1>
-<p>This is a paragraph.</p>
-
+  <div class="container-fluid">
+    <div id="one">
+      <div class="content">
+        <div class="row col-12">
+          <div class="firstfont col-sx-12 col-md-8">
+          Hello,</br>
+          is it me you're
+          looking for?
+          </div>
+          <div class="secondfont col-sx-12 col-md-4">
+            <p>#100DaysofFonts</p>
+            <p>I saw this amazing girl doing amazing things with amazing fonts. So I thought to myself I could do the same for the next 100 days. It would be my visual diary so welcome to the inner working of my weird and wonderful brain.</p>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
 </body>
+
+
 </html>
