--- a/index.html
+++ b/index.html
@@ -6,32 +6,64 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css">
   <link rel="stylesheet" type="text/css" href="css/styles.css">
-
-
-<!--Day 01 fonts-->
-  <link href="https://fonts.googleapis.com/css?family=Playfair+Display|Quicksand:400,500,700&display=swap" rel="stylesheet">
+  <!--Fontawesome-->
+  <script src="https://kit.fontawesome.com/46f016b8b1.js"></script>
+  <!--Google fonts-->
+  <link href="https://fonts.googleapis.com/css?family=Montserrat:400,800|Playfair+Display|Quicksand:400,500,700&display=swap" rel="stylesheet">
 
 </head>
-<!--This is day 01-->
-
 <body>
   <div class="container-fluid">
+    <!--Day 2-->
+    <div id="two">
+      <div class="content">
+        <div class="row col-12">
+          <div class="what col-sx-12 col-md-3">
+            <i class="fas fa-fingerprint fa-7x"></i>
+            <div class="firstfont">What</div>
+            <p class="secondfont">Advertising is telling the world how great you are, while publicity is having others tell the world how great you are. Companies and organizations that understand the importance of publicity are generally more successful than those who use advertising alone to reach their target audiences.</p></div>
+          <div class="why col-sx-12 col-md-3">
+            <i class="fas fa-skull-crossbones fa-7x"></i>
+            <div class="firstfont">Why</div>
+            <p class="secondfont">Advertising is telling the world how great you are, while publicity is having others tell the world how great you are. Companies and organizations that understand the importance of publicity are generally more successful than those who use advertising alone to reach their target audiences.</p></div> 
+          <div class="when col-sx-12 col-md-3">
+            <i class="fas fa-flushed fa-7x"></i>
+            <div class="firstfont">When</div>
+            <p class="secondfont">Advertising is telling the world how great you are, while publicity is having others tell the world how great you are. Companies and organizations that understand the importance of publicity are generally more successful than those who use advertising alone to reach their target audiences.</p></div>
+          <div class="where col-sx-12 col-md-3">
+            <i class="fas fa-ghost fa-7x"></i>
+            <div class="firstfont">Where</div>
+            <p class="secondfont">Advertising is telling the world how great you are, while publicity is having others tell the world how great you are. Companies and organizations that understand the importance of publicity are generally more successful than those who use advertising alone to reach their target audiences.</p></div>
+          <div class="daycount">
+          Montserrat, Quicksand / Day 2
+          </div> 
+        </div>
+      </div></div>
+    <!--Day 1-->
     <div id="one">
       <div class="content">
         <div class="row col-12">
-          <div class="firstfont col-sx-12 col-md-8">
-          Hello,</br>
+          <div class="firstfont-back col-sx-12 col-md-8">
+          hello, </br>
+          darkness my </br>
+          old friend
+          </div>
+
+          <div class="firstfont-front col-sx-12 col-md-8">
+          hello,</br>
           is it me you're
           looking for?
           </div>
+          
           <div class="secondfont col-sx-12 col-md-4">
-            <p>#100DaysofFonts</p>
-            <p>I saw this amazing girl doing amazing things with amazing fonts. So I thought to myself I could do the same for the next 100 days. It would be my visual diary so welcome to the inner working of my weird and wonderful brain.</p>
+          <p><b>#100DaysofFonts</b></p>
+          <p>I saw <a href="http://100daysoffonts.com/index.html">this amazing girl</a> doing amazing things with amazing fonts. So I thought to myself I could do the same for the next (roughly) 100 days. It would be my visual diary so welcome to the inner working of my weird and wonderful brain.</p>
           </div>
+          <div class="daycount">
+          Montserrat, Quicksand / Day 1
+          </div> 
         </div>
-      </div>
-    </div>
-  </div>
+      </div></div></div>
 </body>
 
 
